fix layout for lots of datasources on small screens

--- a/src/app/datasources/components/datasourceActivation/datasourceActivation.scss
+++ b/src/app/datasources/components/datasourceActivation/datasourceActivation.scss
@@ -37,9 +37,9 @@
   font-size: 1em;
   font-weight: 500;
   border-left: 1px solid rgba(0, 0, 0, 0.2);
-  line-height: 50px;
+  line-height: 20px;
   margin: 0;
-  padding-left: 10px;
+  padding: 15px 10px;
 }
 
 .check {
